# Config-Manager

./: .gitignore  README.md  __init__.py  agent_instruction.json  config_manager.instructions.md  config_manager.py  config_template.py  init.py  init.yaml  module_instruction_for_ai_agent.json  pyproject.toml  refresh.py
